src/objects/PANG_Request__c.object
<CustomObject>
    <description>Used to manage and track requests from RWE customers</description>
    <fields>
        <fullName>Access_Location__c</fullName>
        <label>Access Location</label>
        <picklist>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netezza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Access_Status_Notes__c</fullName>
        <label>Access Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Specification_Required__c</fullName>
        <label>Additional Specification Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrator_Status_Notes__c</fullName>
        <label>Administrator Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analyst_Status_Notes__c</fullName>
        <label>Analyst Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_of_Deliverable__c</fullName>
        <inlineHelpText>The relative business need/value for service provided</inlineHelpText>
        <label>Application of Deliverable</label>
        <picklist>
            <picklistValues>
                <fullName>External Regulatory / Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Scientific / Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility Internal Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWE Study Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Access Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Revoked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <label>Business Impact</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Used to indicate data asset vendor name; warned business users that this will have no relation to data asset record</description>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Data_Asset_Contract_Review_s__c</fullName>
        <inlineHelpText>Please review the contract associated with this RWE Data Asset, which can be found in the Notes &amp; Attachments section of the RWE Data Asset record</inlineHelpText>
        <label>Completed Data Asset Contract Review(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Comments__c</fullName>
        <label>Confidentiality Agreement Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Expiration__c</fullName>
        <label>Confidentiality Agreement Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_in_Place__c</fullName>
        <label>Confidentiality Agreement in Place</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Resource_Effort__c</fullName>
        <label>Consultant Resource Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Brief (conversations w/o draft review)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term (1-3 meetings including draft review)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term (&gt;3 meetings including draft review)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Customization_Complete__c</fullName>
        <label>Contract Customization Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Finalized_Date__c</fullName>
        <label>Contract Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Internal_Review__c</fullName>
        <inlineHelpText>Date Lilly&apos;s internal review of the contract was completed</inlineHelpText>
        <label>Contract Internal Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Meeting_Date__c</fullName>
        <inlineHelpText>Date of first meeting of Lilly and potential partner’s lawyers</inlineHelpText>
        <label>Contract Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Meeting_Notes__c</fullName>
        <label>Contract Meeting Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Completion_Date__c</fullName>
        <inlineHelpText>Date contract review was completed</inlineHelpText>
        <label>Contract Review Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_to_Partner__c</fullName>
        <label>Contract Sent to Partner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracting_Phase_Start_Date__c</fullName>
        <label>Contracting Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Required_Format__c</fullName>
        <label>Conversion Required Format</label>
        <picklist>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Approval__c</fullName>
        <label>Customer Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Assessment_with_Sample_Data__c</fullName>
        <label>Data Assessment with Sample Data</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <inlineHelpText>Specifiy Internal RWD Data Asset  Note: *SEER Medicare requires additional approval</inlineHelpText>
        <label>Data Asset</label>
        <picklist>
            <picklistValues>
                <fullName>CPRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geisinger  (Diabetes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humedica (Diabetes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMS Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketscan/Truven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHANES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEER Medicare*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEER Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Data_Can_Be_Used_for_Other_Purposes__c</fullName>
        <label>Data Can Be Used for Other Purposes</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Dictionary_Attached__c</fullName>
        <label>Data Dictionary Attached</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Evaluation_Requirements__c</fullName>
        <label>Data Evaluation Requirements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Load_Successful__c</fullName>
        <label>Data Load Successful</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Load_Type__c</fullName>
        <label>Data Load Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Sourcing_Request_Type__c</fullName>
        <label>Data Sourcing Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consultation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Storage_or_Use_Outside_U_S__c</fullName>
        <label>Data Storage or Use Outside U.S.</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Types__c</fullName>
        <label>Data Types</label>
        <picklist>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Database_s_Considered__c</fullName>
        <label>Database(s) Considered:</label>
        <length>7500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Accepted__c</fullName>
        <label>Date Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Access_Removed__c</fullName>
        <label>Date Access Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Archived__c</fullName>
        <label>Date Archived</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_In_Progress__c</fullName>
        <label>Date In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Request description and relevant information</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Location__c</fullName>
        <description>Provide the desired location.  If there is an issue with the location then you will be contacted. When selecting “other” please indicate where</description>
        <label>Desired Location</label>
        <picklist>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netezza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Patient_Identifiers_are_Removed__c</fullName>
        <label>Direct Patient Identifiers are Removed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disease_State_Details__c</fullName>
        <label>Disease State Details</label>
        <picklist>
            <picklistValues>
                <fullName>ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer&apos;s Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lupus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSCLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psoriasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatoid Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Tissue Sarcoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ESSENTIAL_Criteria_needed__c</fullName>
        <description>Check ALL Variables that are ESSENTIAL to answer Research Questions</description>
        <inlineHelpText>Check ALL Variables that are ESSENTIAL to answer Research Questions</inlineHelpText>
        <label>ESSENTIAL Criteria needed</label>
        <picklist>
            <picklistValues>
                <fullName>Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMI/Ht/Wt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Time lag for data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settings of core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease Severity Level (i.e., Staging)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to physicians notes/Chart Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QOL/Performance status measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Effectiveness measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EXPERT_Exception_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EXPERT Exception Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPERT_Recommendation__c</fullName>
        <label>EXPERT Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Pending - Major Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete - Moderate Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete - Minor or No Comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EXPERT_Review_Type__c</fullName>
        <label>EXPERT Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Review - Resubmit Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Committee_Review_Date__c</fullName>
        <label>Executive Committee Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Committee_Review_Status__c</fullName>
        <label>Executive Committee Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved with Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_of_Access__c</fullName>
        <label>Expiration Date of Access</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exploration_Phase_Start_Date__c</fullName>
        <label>Exploration Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extract_Expiration_Date__c</fullName>
        <inlineHelpText>This is the date the data will be removed</inlineHelpText>
        <label>Extract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extract_Operations_Approval_Status__c</fullName>
        <label>Extract Operations Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extract_Status_Notes__c</fullName>
        <label>Extract Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FDAMA114_SOP_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FDAMA114 SOP Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDAMA114__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FDAMA114</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDAMA_Review_Cycle__c</fullName>
        <inlineHelpText>Only required if this is a FDAMA Review</inlineHelpText>
        <label>FDAMA Review Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Competent &amp; Reliable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Review</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Name_in_Temporary_Landing_Area__c</fullName>
        <inlineHelpText>When loading data to the temporary area make sure that the file name in the text box is the same as the file name that was loaded to the landing area</inlineHelpText>
        <label>File Name in Temporary Landing Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Outcome__c</fullName>
        <inlineHelpText>Summary of request output</inlineHelpText>
        <label>Final Outcome</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Five_Business_Days_DATE__c</fullName>
        <formula>CASE(MOD( TODAY() - DATE(1985,6,24),7), 
0, TODAY() + 7, 
1, TODAY() + 7, 
2, TODAY() + 7, 
3, TODAY() + 7, 
4, TODAY() + 7, 
5, TODAY() + 6, 
6, TODAY() + 5, 
TODAY() + 9999)</formula>
        <label>Five Business Days DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Governance_Committee_Decision__c</fullName>
        <label>Governance Committee Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved - Continue Exploration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Go to Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Governance_Committee_Meeting_Agenda_Sent__c</fullName>
        <inlineHelpText>When was agenda sent for Governance Committee review of this proposal?</inlineHelpText>
        <label>Governance Committee Meeting Agenda Sent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Governance_Committee_Review_Comments__c</fullName>
        <label>Governance Committee Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Governance_Committee_Review_Date__c</fullName>
        <label>Governance Committee Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Governance_Phase_Start_Date__c</fullName>
        <label>Governance Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Governance_Pre_Reads_Posted__c</fullName>
        <label>Governance Pre-Reads Posted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IMPACT_BoB_ID__c</fullName>
        <formula>Related_Project__r.Project_ID__c</formula>
        <label>IMPACT/BoB ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Engagement_Comments__c</fullName>
        <label>Internal Engagement Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Engagement_Complete__c</fullName>
        <label>Internal Engagement Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Potential_Partner_Interested__c</fullName>
        <label>Is Potential Partner Interested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Joint_Governance_Committee_Established__c</fullName>
        <label>Joint Governance Committee Established</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Joint_Research_Committee_Established__c</fullName>
        <label>Joint Research Committee Established</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kick_Off_Meeting__c</fullName>
        <inlineHelpText>Scheduled date of Joint Governance Committee kick-off meeting</inlineHelpText>
        <label>Kick-Off Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Phase_Start_Date__c</fullName>
        <label>Launch Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Legal_Person_Comments__c</fullName>
        <label>Lead Legal Person Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Legal_Person_Identified__c</fullName>
        <label>Lead Legal Person Identified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Notification_Comments__c</fullName>
        <label>Legal Notification Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Notification__c</fullName>
        <label>Legal Notification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_to_Partnership_Inventory_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link to Partnership Inventory Record</label>
        <referenceTo>PANG_Partnership__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>RWE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Load_Commitment_Date__c</fullName>
        <inlineHelpText>The date that the data will be loaded based on effort required to complete data load request, other business RWD load commitments, and agreement between the requestor and the RWE Inc. personnel involved in this request activity.</inlineHelpText>
        <label>Load Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQS_Procedure_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MQS/Procedure Question</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>